--- a/index.html
+++ b/index.html
@@ -3,3 +3,8 @@
 <head>
     <title>Voici un petit site internet</title>
     <link rel="stylesheet" href="style.css">
+    </head>
+<body>
+    <h1> BONSOIR <h1>
+        </body>
+        
